[package]
name = "solana_trading_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
base64="0.22.1"
anyhow="1.0.98"
bincode="1.3.3"
reqwest="0.12.22"
serde_json="1.0.142"
bs58="0.5.0"
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }

solana-client="2.3.7"
solana-sdk="2.3.1"


spl-associated-token-account = "7.0.0"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
